# heapuri

./: CMakeLists.txt  README.md  analysis.md
include/: avl.h  scapegoat.h
plot/: plot.py  results.txt
src/: avl.cpp  benchmark.cpp  main.cpp  scapegoat.cpp
